# freecad-examples

./: .gitignore  SketcherExample.py  box.FCStd  claude.py  conftest.py  const.py  createstubs.py  document.py  drawing.py  example001.FCStd  example001.py  example001a.20241113-160835.FCBak  example001a.py  example003.py  freecadconvert.py  freecadgui_examples.py  install.bat.txt  main.py  pyproject.toml  pytest.ini  save.py  slot.py  template.py  templategui.py  utils.py
applications/stencil-creator/: stencil.py  stencil_dimensions.20241119-172520.FCBak
examples/: example001.py  example001a.py  example001b.py  example001c.py  example001d.py  example002.py  example0020a.py  example004.py  example005.py  example006.py  example007.py  example020b.py  freecadgui_examples.py  johnshirt_footrest.py  stencil.py  stencil_paddle.py
src/: const.py  document.py  drawing.py  drawing.pyi  freecad_imports.py  turtlesketch.py
stubs/: Draft.pyi  FreeCAD.pyi  Mesh.pyi  Part.pyi  Sketcher.pyi  importSVG.pyi
tests/: common.py  conftest.py  drawing_polyline_test.py  drawing_rectangle_test.py  freecad_imports_test.py  helpers.py  polyline_test.py  test_one.py
