[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "pytest",
    "pybind11-stubgen"
]


[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]

